--- a/_includes/component_list_environment.html
+++ b/_includes/component_list_environment.html
@@ -11,7 +11,7 @@
 
 {% if environmentPostCount > 0 %}
     {% assign environmentPostCount = 0 %}
-<div class="block block_default_fonts">
+<div class="block block_default_fonts right">
     <h1>Environment</h1>
     <div class="entries">
         {% for post in site.categories['environment'] %}
