--- a/_includes/component_list_foreign_affairs.html
+++ b/_includes/component_list_foreign_affairs.html
@@ -11,7 +11,7 @@
 
 {% if foreignAffairsPostCount > 0 %}
     {% assign foreignAffairsPostCount = 0 %}
-<div class="block block_default_fonts">
+<div class="block block_default_fonts right">
     <h1>Foreign Affairs</h1>
     <div class="entries">
         {% for post in site.categories['foreign affairs'] %}
