Add space after button text

--- a/_includes/post_bottom.html
+++ b/_includes/post_bottom.html
@@ -36,7 +36,7 @@
                     data-placement="top"
                     title="Tweet this page">
                     <i class="fa fa-twitter fa-lg" aria-hidden="true"></i>&nbsp;
-                    Tweet
+                    Tweet&nbsp;
                 </a>
             </li>
         </ul>
