Fix navigation link styles

--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -62,8 +62,9 @@ $word_spacing:              0.155em;
 // -----------------------------------------------------------------------------
 
 // Navigation
-$font_nav:                      $font_serif_thin;
-$font_size_nav:	                14px;
+$font_nav:                      $font_sans_thin;
+$font_size_nav:                 12px;
+
 $font_size_page_nav:            $font_size_nav + 2;
 
 $font_attribution:              $font_serif_thin;
