--- a/_includes/news_bits.html
+++ b/_includes/news_bits.html
@@ -4,7 +4,23 @@
         {% for post in site.categories['newsbit'] limit:20 %}
         <div class="entry">
             <p class="date">{{ post.date | date: site.data.format.date_only }}</p>
+            {% comment %}
             <p class="excerpt">{{ post.excerpt | remove: '<p>' | remove: '</p>' | strip | remove: '"' }}</p>
+            {% endcomment %}
+            <p class="excerpt">
+                {{ post.content }}
+            </p>
+            {% if post.sources.size and post.sources.size > 0 and post.sources[0].link %}
+            <p>Sources:
+                {% for source in post.sources %}
+                    {% if source.link %}
+                <span><a href="{{ source.link }}">{{ source.label }}</a></span>{% unless forloop.last %},{% endunless %}
+                    {% else %}
+                <span>{{ source.label }}</span>{% unless forloop.last %},{% endunless %}
+                    {% endif %}
+                {% endfor %}
+            </p>
+            {% endif %}
         </div>
         {% endfor %}
     </div>
