--- a/_includes/component_list_agrarian.html
+++ b/_includes/component_list_agrarian.html
@@ -11,8 +11,7 @@
 
 {% if agrarianPostCount > 0 %}
     {% assign agrarianPostCount = 0 %}
-<div class="block block_default_fonts">
-    <h1>Agrarian</h1>
+<div class="block sub_block block_default_fonts">
     <div class="entries">
         {% for post in site.categories['agrarian'] %}
             {% if post.categories contains 'top' or post.categories contains 'headline' %}
