--- a/_includes/component_list_business.html
+++ b/_includes/component_list_business.html
@@ -11,8 +11,7 @@
 
 {% if businessPostCount > 0 %}
     {% assign businessPostCount = 0 %}
-<div class="block block_default_fonts">
-    <h1>Business</h1>
+<div class="block sub_block block_default_fonts">
     <div class="entries">
         {% for post in site.categories['business'] %}
             {% if post.categories contains 'top' or post.categories contains 'headline' %}
