--- a/_includes/component_list_criminality.html
+++ b/_includes/component_list_criminality.html
@@ -11,8 +11,7 @@
 
 {% if criminalityPostCount > 0 %}
     {% assign criminalityPostCount = 0 %}
-<div class="block block_default_fonts">
-    <h1>Criminality</h1>
+<div class="block sub_block block_default_fonts">
     <div class="entries">
         {% for post in site.categories['criminality'] %}
             {% if post.categories contains 'top' or post.categories contains 'headline' %}
