--- a/_includes/component_list_others.html
+++ b/_includes/component_list_others.html
@@ -1,7 +1,6 @@
 {% if site.categories['other'].size > 0 %}
     {% assign otherPostCount = 0 %}
-<div class="block block_default_fonts right">
-    <h1>Other News</h1>
+<div class="block sub_block block_default_fonts right">
     <div class="entries">
     {% for post in site.categories['other'] %}
         <div class="entry">
