--- a/_sass/info.scss
+++ b/_sass/info.scss
@@ -3,6 +3,10 @@
         display: none;
     }
 
+    @include max-screen(720px) {
+        margin-bottom: 15px;
+    }
+
     div.image_small {
         float: right;
         width: 40%;
