--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -18,9 +18,10 @@
 @import "datetime";
 @import "weather";
 @import "quote";
-@import "announcements";
+@import "announcement";
 @import "info";
-@import "newsbits";
+@import "newsbit";
+@import "opinion";
 
 
 
@@ -315,27 +316,37 @@ main {
 }
 
 section {
-    &.column_left_sidebar {
-        @include min-screen(1281px) { width: 270px; }
-        @include max-screen(1280px) { width: 23%; }
-        @include max-screen(1024px) { width: 30%; }
-        @include max-screen(720px)  { width: 93%; }
+
+    @include min-screen(1281px) {
+        &.column_left_sidebar,
+        &.column_right_sidebar  { width: 270px; }
+        &.hub_column_main,
+        &.post_column_main,
+        &.page_column_main      { width: calc(100% - 270px - 270px - 60px); }
     }
 
-    &.hub_column_main,
-    &.post_column_main,
-    &.page_column_main {
-        @include min-screen(1281px) { width: 51%; }
-        @include max-screen(1280px) { width: 44%; }
-        @include max-screen(1024px) { width: 62%; }
-        @include max-screen(720px)  { width: 93%; }
+    @include max-screen(1280px) {
+        &.column_left_sidebar,
+        &.column_right_sidebar  { width: 270px; }
+        &.hub_column_main,
+        &.post_column_main,
+        &.page_column_main      { width: calc(100% - 270px - 270px - 60px); }
     }
 
-    &.column_right_sidebar {
-        @include min-screen(1281px) { width: 270px; }
-        @include max-screen(1280px) { width: 23%; }
-        @include max-screen(1024px) { width: 62%; }
-        @include max-screen(720px)  { width: 93%; }
+    @include max-screen(1024px) {
+        &.column_left_sidebar,
+        &.column_right_sidebar  { width: 270px; }
+        &.hub_column_main,
+        &.post_column_main,
+        &.page_column_main      { width: calc(100% - 270px - 270px - 60px); }
+    }
+
+    @include max-screen(720px) {
+        &.column_left_sidebar,
+        &.column_right_sidebar,
+        &.hub_column_main,
+        &.post_column_main,
+        &.page_column_main      { width: calc(100% - 20px); }
     }
 }
 
@@ -348,7 +359,7 @@ section {
     &.column_right_sidebar {
         float: left;
         font-family: $font_default;
-        margin: 10px 15px 15px 15px;
+        margin: 10px 10px 10px 10px;
         @include max-screen(720px) {
             @include set_margin_v(0px, 0px);
         }
