--- a/_sass/quote.scss
+++ b/_sass/quote.scss
@@ -1,49 +1,46 @@
-
 #random_quotes_block {
     @media print {
         display: none;
     }
-    @include sidebar_component;
 
     @include min-screen(720px + 1px) {
         // Override top padding since this component is at the top
         padding-top: 0px;
     }
+}
 
-    div.random_quotes {
-        @include sidebar_component_internal;
+#random_quotes {
 
-        div.quote {
-            p {
-                @include compact;
-                &.qtext {
-                    @include set_font($font_quote, $font_size_quote, $color_quote_text, normal, normal);
-                    @include max-screen(720px) {
-                        font-size: $font_size_quote + 1;
-                    }
-                    line-height: $font_line_height_quote;
-                    i.fa-quote-left {
-                        color: lighten($color_sidebar_label, 15%);
-                    }
-                }
+    div.quote > p {
+        @include compact;
 
-                &.qauthor {
-                    @include set_font($font_quote_author, $font_size_quote_author, $color_quote_author);
-                    text-transform: uppercase;
-                    padding-top: 5px;
-                }
-                &.context {
-                    @include set_font($font_quote_context, $font_size_quote_context, $color_quote_context);
-                    font-style: italic;
-                    line-height: $font_size_quote_context;
-                    @include max-screen(720px) {
-                        line-height: $font_size_quote_context + 4;
-                    }
-                    color: lighten($color_quote_author, 15%);
-                    margin-left: 20px;
-                    padding-top: 2px;
-                }
+        &.qtext {
+            @include set_font($font_quote, $font_size_quote, $color_quote_text, normal, normal);
+            @include max-screen(720px) {
+                font-size: $font_size_quote + 1;
             }
+            line-height: $font_line_height_quote;
+            i.fa-quote-left {
+                color: lighten($color_sidebar_label, 15%);
+            }
+        }
+
+        &.qauthor {
+            @include set_font($font_quote_author, $font_size_quote_author, $color_quote_author);
+            text-transform: uppercase;
+            padding-top: 5px;
+        }
+
+        &.context {
+            @include set_font($font_quote_context, $font_size_quote_context, $color_quote_context);
+            font-style: italic;
+            line-height: $font_size_quote_context;
+            @include max-screen(720px) {
+                line-height: $font_size_quote_context + 4;
+            }
+            color: lighten($color_quote_author, 15%);
+            margin-left: 20px;
+            padding-top: 2px;
         }
     }
 }
