--- a/_sass/layout_hub.scss
+++ b/_sass/layout_hub.scss
@@ -33,6 +33,8 @@ section.hub_column_main {
             @include min-screen(1024px + 1px) {
                 width: calc(50% - 5px);
                 flex: 1;
+                display: flex;
+                flex-direction: column;
             }
 
             border-top: 3px solid $color_primary;
@@ -46,5 +48,23 @@ section.hub_column_main {
         }
 
         // Contents are displayed in div.block
+
+        div.block {
+            background: $color_main_bg;
+        }
+
+        div.block + div.block {
+            // No padding at the top
+            // Less vertical spacing between the slider and list blocks
+            padding: 0 10px 10px 10px;
+            background: lighten($color_bg, 12%);
+            border-radius: 3px;
+            border: 1px solid lighten($color_bg, 5%);
+            flex: 1;
+
+            & > div.entries {
+                margin-bottom: 0 !important;
+            }
+        }
     }
 }
