--- a/_sass/color_light.scss
+++ b/_sass/color_light.scss
@@ -79,9 +79,10 @@ $color_info_text:               $color_text;
 // News Hub
 $color_news_title:              lighten($color_text, 20%);
 $color_news_date:               darken($color_primary, 5%);
-$color_news_excerpt:            $color_text;
+$color_news_excerpt:            lighten($color_text, 20%);
 $color_news_text:               $color_text;
-$color_news_line:               #ddd;
+$color_news_line:               #f0f0f0;
+$color_news_background:         #fbfbfb;
 
 // Page/Post
 $color_page_text:               lighten($color_text, 10%);
