--- a/_sass/block.scss
+++ b/_sass/block.scss
@@ -81,39 +81,39 @@ div.block {
 div.block_default_fonts {
     div.entries {
         div.entry {
-            h2, a {
+            h2, h2 > a {
                 @include component_entry_heading($font_news_title, $font_size_news_title, $color_news_title);
                 line-height: $font_line_height_news_title;
                 @include max-screen(720px) {
                     font-size: $font_size_news_title - 1;
                 }
             }
-            h2 a {
+            h2 > a {
                 border-bottom: none;
                 &:hover {
                     color: $color_link;
                 }
             }
 
-            p {
+            p, li, p > a, li > a {
                 @include set_font($font_news_text, $font_size_news_text, $color_news_text);
                 line-height: $font_line_height_news_text;
                 @include max-screen(720px) {
                     line-height: $font_line_height_news_text + 4;
                 }
-                &.date {
-                    @include set_font($font_news_date, $font_size_news_date, $color_news_date);
-                    line-height: $font_line_height_news_date;
-                    @include max-screen(720px) {
-                        line-height: $font_line_height_news_text + 2;
-                    }
+            }
+            p.date {
+                @include set_font($font_news_date, $font_size_news_date, $color_news_date);
+                line-height: $font_line_height_news_date;
+                @include max-screen(720px) {
+                    line-height: $font_line_height_news_text + 2;
                 }
-                &.excerpt {
-                    @include set_font($font_news_excerpt, $font_size_news_excerpt, $color_news_excerpt);
-                    line-height: $font_line_height_news_excerpt;
-                    @include max-screen(720px) {
-                        line-height: $font_line_height_news_text + 2;
-                    }
+            }
+            p.excerpt {
+                @include set_font($font_news_excerpt, $font_size_news_excerpt, $color_news_excerpt);
+                line-height: $font_line_height_news_excerpt;
+                @include max-screen(720px) {
+                    line-height: $font_line_height_news_text + 2;
                 }
             }
         }
@@ -125,12 +125,12 @@ div.block_default_fonts {
 div.block_compact_fonts {
     div.entries {
         div.entry {
-            h2, h2 a {
+            h2, h2 > a {
                 text-transform: uppercase;
                 letter-spacing: 0.2px;
                 word-spacing: 0.175em;
             }
-            h2, a {
+            h2, h2 > a {
                 @include component_entry_heading($font_compact_title, $font_size_compact_title, $color_compact_title);
                 line-height: $font_line_height_compact_title;
                 @include max-screen(720px) {
@@ -142,24 +142,24 @@ div.block_compact_fonts {
                     padding-bottom: 2px;
                 }
             }
-            h2 a {
+            h2 > a {
                 border-bottom: none;
                 &:hover {
                     color: $color_link;
                 }
             }
 
-            p, li, a {
+            p, li, p > a, li > a {
                 @include set_font($font_compact_text, $font_size_compact_text, $color_compact_text);
                 line-height: $font_line_height_compact_text;
                 @include max-screen(720px) {
                     line-height: $font_line_height_compact_text + 4;
                 }
-                &.date {
-                    @include set_font($font_compact_date, $font_size_compact_date, $color_compact_date);
-                    @include max-screen(720px) {
-                        line-height: $font_line_height_compact_date + 2;
-                    }
+            }
+            p.date {
+                @include set_font($font_compact_date, $font_size_compact_date, $color_compact_date);
+                @include max-screen(720px) {
+                    line-height: $font_line_height_compact_date + 2;
                 }
             }
         }
