Add government page

--- a/_includes/info_left_sidebar.html
+++ b/_includes/info_left_sidebar.html
@@ -1,2 +1,5 @@
 <section class="column_left_sidebar">
+    {% include component_datetime.html %}
+    {% include component_quotes.html %}
+    {% include component_slideshow_announcements.html %}
 </section>
