Rename to a generic div class

--- a/_sass/layout_hub.scss
+++ b/_sass/layout_hub.scss
@@ -7,7 +7,7 @@ section.hub_column_main {
         margin-top: 10px;
     }
 
-    div.news_section_container {
+    div.section_container {
         float: left;
         width: 100%;
 
