--- a/_sass/color_light.scss
+++ b/_sass/color_light.scss
@@ -13,7 +13,7 @@ $color_main_bg:                 #ffffff;
 $color_box:                     #eee;
 
 // Text
-$color_text:                    lighten(black, 10%);
+$color_text:                    lighten(black, 30%);
 
 // Link
 $color_link:			        $color_primary;
@@ -45,12 +45,12 @@ $color_hr_dark:                 #404040;
 $color_hr_darker:               $color_bg;
 
 // Blockquote
-$color_blockquote:              lighten($color_text, 30%);
+$color_blockquote:              $color_text;
 $color_blockquote_bar:          darken($color_main_bg, 7%);
 $color_blockquote_bg:           darken($color_main_bg, 2%);
 
 $color_image_bg:                $color_bg;
-$color_image_attribution:       lighten($color_text, 10%);
+$color_image_attribution:       $color_text;
 
 // Specifics
 // -----------------------------------------------------------------------------
@@ -60,35 +60,35 @@ $color_nav:                     $color_text;
 $color_nav_bg:                  $color_header_bg;
 
 // Compact components entries
-$color_compact_title:           lighten($color_text, 20%);
-$color_compact_date:            lighten($color_text, 30%);
+$color_compact_title:           lighten($color_text, 9%);
+$color_compact_date:            $color_text;
 $color_compact_text:            $color_text;
 
 // Announcement
 // Rename as compact color style
-$color_announcement_title:      lighten($color_text, 20%);
-$color_announcement_date:       lighten($color_text, 30%);
+$color_announcement_title:      lighten($color_text, 9%);
+$color_announcement_date:       $color_text;
 $color_announcement_text:       $color_text;
 
 // Info
 // Rename as compact color style
-$color_info_title:              lighten($color_text, 20%);
-$color_info_date:               lighten($color_text, 30%);
+$color_info_title:              lighten($color_text, 9%);
+$color_info_date:               $color_text;
 $color_info_text:               $color_text;
 
 // News Hub
-$color_news_title:              lighten($color_text, 20%);
+$color_news_title:              lighten($color_text, 9%);
 $color_news_date:               darken($color_primary, 5%);
-$color_news_excerpt:            lighten($color_text, 20%);
+$color_news_excerpt:            $color_text;
 $color_news_text:               $color_text;
 $color_news_line:               #f0f0f0;
 $color_news_background:         #fbfbfb;
 
 // Page/Post
-$color_page_text:               lighten($color_text, 10%);
+$color_page_text:               $color_text;
 
 // News bit
-$color_news_bit_date:           lighten($color_text, 30%);
+$color_news_bit_date:           lighten($color_text, 10%);
 
 // Sidebar
 $color_sidebar_label:           $color_primary;
@@ -102,11 +102,11 @@ $color_aside_bg:                $color_header_bg;
 $color_aside_border:            $color_red - 100;
 
 // Post tag
-$color_tag_text:                lighten($color_text, 30%);
+$color_tag_text:                lighten($color_text, 10%);
 $color_tag_bg:                  #ededed;
 
 // Quote
-$color_quote_text:              lighten($color_text, 20%);
+$color_quote_text:              $color_text;
 $color_quote_author:            $color_text;
 $color_quote_context:           $color_text;
 
@@ -121,3 +121,4 @@ $color_button_text:             $color_main_bg;
 $color_button_bg:               $color_primary;
 $color_button_hover_text:       $color_button_bg;
 $color_button_hover_bg:         $color_header_border_bottom;
+
