--- a/_sass/layout_info.scss
+++ b/_sass/layout_info.scss
@@ -1,10 +1,16 @@
 section.info_column_main {
 
-    h1 {
-        font-weight: normal;
-    }
-
     div.gov_definition {
+        p,
+        li,
+        p > a,
+        li > a {
+            @include set_font($font_news_text, $font_size_news_text, $color_news_text);
+            line-height: $font_line_height_news_text;
+            @include max-screen(720px) {
+                line-height: $font_line_height_news_text + 2;
+            }
+        }
     }
 
     div.branch_definition {
@@ -59,25 +65,23 @@ section.info_column_main {
                 padding-top: 10px;
             }
 
-            div.entries {
-                div.entry {
-                    h2, h2 > a {
-                        font-weight: normal;
-                    }
+            div.entries > div.entry {
+                h2, h2 > a {
+                    //font-weight: normal;
                 }
             }
         }
     }
 
-    div.block {
-        & ~ p,
-        & ~ li,
-        & ~ p > a,
-        & ~ li > a {
+    div.block > div.entries > div.entry {
+        p,
+        li,
+        p > a,
+        li > a {
             @include set_font($font_news_text, $font_size_news_text, $color_news_text);
             line-height: $font_line_height_news_text;
             @include max-screen(720px) {
-                line-height: $font_line_height_news_text + 4;
+                line-height: $font_line_height_news_text + 2;
             }
         }
     }
