--- a/_sass/quote.scss
+++ b/_sass/quote.scss
@@ -10,6 +10,7 @@
 }
 
 #random_quotes {
+    margin-top: 10px;
 
     div.quote > p {
         @include compact;
@@ -28,19 +29,19 @@
         &.qauthor {
             @include set_font($font_quote_author, $font_size_quote_author, $color_quote_author);
             text-transform: uppercase;
-            padding-top: 5px;
+            padding-top: 10px;
         }
 
         &.context {
             @include set_font($font_quote_context, $font_size_quote_context, $color_quote_context);
             font-style: italic;
-            line-height: $font_size_quote_context;
+            line-height: $font_size_quote_context + 4;
             @include max-screen(720px) {
                 line-height: $font_size_quote_context + 4;
             }
             color: lighten($color_quote_author, 15%);
             margin-left: 20px;
-            padding-top: 2px;
+            padding-top: 5px;
         }
     }
 }
