Fix section link

--- a/_includes/links_navigation.html
+++ b/_includes/links_navigation.html
@@ -15,6 +15,8 @@
                 <a href="/news/business/">Business</a>
                 <a href="/news/foreign_affairs/">Foreign Affairs</a>
                 <a href="/news/other/">Other News</a>
+                <hr>
+                <a href="/opinion/">Opinions</a>
             </div>
         </li>
 
