Bigger menu dropdown links

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -150,6 +150,7 @@ header {
                 margin: 0 7px 0 7px;
                 padding: 7px 11px;
                 color: $color_button_text;
+                font-size: $font_size_nav + 1;
                 display: block;
                 text-align: left;
                 white-space: nowrap;
