--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -168,6 +168,12 @@ header {
                     border: none;
                 }
             }
+
+            hr {
+                margin: 7px 0 7px 0;
+                background-image: linear-gradient(to right, $color_button_bg, rgba(200, 200, 200, 0.75), $color_button_bg);
+                height: 1px;
+            }
         }
 
         li.dropdown:hover div.dropdown_content {
