Rename some files, mixins, etc

--- a/_includes/hub_left_sidebar.html
+++ b/_includes/hub_left_sidebar.html
@@ -1,7 +1,7 @@
 <section class="column_left_sidebar">
-    {% include component_datetime.html %}
-    {% include component_quotes.html %}
-    {% include component_slideshow_announcements.html %}
-    {% include component_weather_satellite.html %}
-    {% include component_list_info.html %}
+    {% include block_datetime.html %}
+    {% include block_quotes.html %}
+    {% include block_slideshow_announcements.html %}
+    {% include block_weather_satellite.html %}
+    {% include block_list_info.html %}
 </section>
