--- a/_includes/info_left_sidebar.html
+++ b/_includes/info_left_sidebar.html
@@ -1,5 +1,5 @@
 <section class="column_left_sidebar">
-    {% include component_datetime.html %}
-    {% include component_quotes.html %}
-    {% include component_slideshow_announcements.html %}
+    {% include block_datetime.html %}
+    {% include block_quotes.html %}
+    {% include block_slideshow_announcements.html %}
 </section>
